[gd_scene load_steps=3 format=3 uid="uid://bm73t4vyn08dt"]

[ext_resource type="Script" path="res://InteractableObject.gd" id="1_vt2q5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2am5s"]

[node name="InteractableObject" type="Area2D"]
script = ExtResource("1_vt2q5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2am5s")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
